--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   FRESHPAINT_CUSTOM_LIB_URL:"//perfalytics.com/static/js/freshpaint.js";d=f.getElementsByTagName("script")[0];d.parentNode.insertBefore(b,d)}})(document,window.freshpaint||[]);
   freshpaint.init("e15d7538-4ca7-4f75-add6-bcbb6538915a");
 </script>
-
+<script src="https://posthog-lalip.herokuapp.com/static/array.js"></script>
+<script>
+posthog.init('hgsqV3baICyDdXujg8ds-8TRTFeLs9x6andMESNAW9E', {api_host: 'https://posthog-lalip.herokuapp.com'})
+</script>
  </head> 
  <body> 
  	<iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://anto807191.typeform.com/to/rNMsDt"></iframe> 
